change icon of fab

--- a/StopWatch/app/src/main/res/layout/activity_main.xml
+++ b/StopWatch/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
-        android:src="@android:drawable/ic_menu_add"
+        android:src="@drawable/fab_ic_add"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"/>
